kubernetes/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1 # Apenas uma réplica para este exemplo.
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database # Garante que este pod é associado ao serviço "postgres-service"
    spec:
      containers:
      - name: postgres
        image: postgres:17
        ports:
          - containerPort: 5432 # Porta padrão do PostgreSQL
        volumeMounts:
          # Monta o volume persistente para armazenar dados do PostgreSQL
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
      volumes:
        # Define o volume como um PVC
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
