kubernetes/deployment-odoo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deployment
spec:
  replicas: 2 # Define duas réplicas para garantir maior disponibilidade
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo # Garante que o serviço possa identificar os pods Odoo corretamente
    spec:
      containers:
      - name: odoo
        image: odoo:18
        ports:
          - containerPort: 8069 # Porta padrão do Odoo
      volumes:
        # Liga o ConfigMap do Odoo a este deployment
        - name: odoo-config
          configMap:
            name: odoo-config
