kubernetes/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
spec:
  type: ClusterIP
  ports:
    - port: 8069
      targetPort: 8069
  selector:
    app: odoo
