kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Força redirecionamento para HTTPS
spec:
  tls:
  - hosts:
    - hello.local # Nome do domínio, utilizei o do exercicio passado
    secretName: secret-tls # Secret com o certificado TLS
  rules:
  - host: hello.local
    http:
      paths:
      - path: / # Root da aplicação
        pathType: Prefix
        backend:
          service:
            name: odoo-service
            port:
              number: 8069 # Porta onde o Odoo está exposto
